--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<h1>All Posts by <%= current_user.name %></h1>
+
+<ul>
+<% @all_posts.each_with_index do |post, index| %>
+
+
+<li><h3><%= post.title %></h3>
+<p><%= post.content %></p></li>
+
+
+<% end %>
+</ul>
