--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Static#home</h1>
+<% provide(:title, 'Homepage') %>
 <p>Find me in app/views/static/home.html.erb</p>
 
 <!-- Hide this if current_user exists -->
