--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,17 @@
 
   <body>
     <h1><%= yield(:title) %></h1>
+    <%= render "partials/nav" %>
+
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
+
+    <footer>
+      <%= render "partials/nav" %>
+
+      &copy; Bloggies 2017
+    </footer>
   </body>
 </html>
